--- a/app/src/main/res/layout/input.xml
+++ b/app/src/main/res/layout/input.xml
@@ -22,6 +22,9 @@
     android:id="@+id/keyboard"
     android:layout_alignParentBottom="true"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:keyBackground="@drawable/keyshape"
+    android:keyTextColor="#000000"
+    >
 
 </com.example.willake.aboriginalime.AboriginalKeyboardView>
