--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,7 @@
     <color name="candidate_recommended">#FFE35900</color>
     <color name="candidate_other">#ff808080</color>
     <color name="candidate_background">#bbffffff</color>
+    <color name="key_normal_light">#F7F7F2</color>
+    <color name="keyboard_background_light">#FFC8C8C8</color>
+    <color name="key_press_background_light_fl">#FFFBFBFB</color>
 </resources>
