--- a/app/src/main/res/xml/qwerty.xml
+++ b/app/src/main/res/xml/qwerty.xml
@@ -24,6 +24,15 @@
     android:keyHeight="@dimen/key_height"
     >
     <Row>
+        <Key android:codes="94" android:keyLabel="^" android:keyEdgeFlags="left"/>
+        <Key android:codes="233" android:keyLabel="é"/>
+        <Key android:codes="7775" android:keyLabel="ṟ"/>
+        <Key android:codes="616" android:keyLabel="ɨ"/>
+        <Key android:codes="649" android:keyLabel="ʉ"/>
+        <Key android:codes="180" android:keyLabel="´" android:keyEdgeFlags="right"/>
+    </Row>
+
+    <Row>
         <Key android:codes="113" android:keyLabel="q" android:keyEdgeFlags="left"/>
         <Key android:codes="119" android:keyLabel="w"/>
         <Key android:codes="101" android:keyLabel="e"/>
