--- a/app/src/main/res/xml/symbols_shift.xml
+++ b/app/src/main/res/xml/symbols_shift.xml
@@ -21,7 +21,8 @@
     android:keyWidth="10%p"
     android:horizontalGap="0px"
     android:verticalGap="0px"
-    android:keyHeight="@dimen/key_height">
+    android:keyHeight="@dimen/key_height"
+    >
 
     <Row>
         <Key android:codes="126" android:keyLabel="~" android:keyEdgeFlags="left"/>
