--- a/app/src/main/res/layout/input.xml
+++ b/app/src/main/res/layout/input.xml
@@ -2,7 +2,7 @@
 <!--
 /*
 **
-** Copyright 2008, The Android Open Source Project
+** Copyright 2017, Willake Lin
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -25,6 +25,7 @@
     android:layout_height="wrap_content"
     android:keyBackground="@drawable/keyshape"
     android:keyTextColor="#000000"
+    android:background="@color/keyboard_background_light"
     >
 
 </com.example.willake.aboriginalime.AboriginalKeyboardView>
