--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -2,7 +2,7 @@
 <!--
 /*
 **
-** Copyright 2008, The Android Open Source Project
+** Copyright 2017, Willake Lin
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -18,5 +18,5 @@
 */
 -->
 <resources>
-    <dimen name="key_height">46dip</dimen>
+    <dimen name="key_height">36dip</dimen>
 </resources>
